set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIRECTORY}/apps)
if(WIN32)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endif()

if(APPLE)
  set(CMAKE_INSTALL_RPATH "@executable_path/../lib")
  if(NOT BUILD_MAC_APP_BUNDLE)
    set(CMAKE_MACOSX_RPATH TRUE)
  endif()
else()
  set(CMAKE_INSTALL_RPATH "\${ORIGIN}/../lib")
endif()
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

option(BUILD_MNE_SCAN "Build MNE Scan" ON)
option(BUILD_MNE_ANALYZE "Build MNE Analyze" ON)
option(BUILD_MNE_ANONYMIZE "Build MNE Anonymize" ON)
option(BUILD_MNE_RT_SERVER "Build MNE Rt Server" ON)
option(BUILD_MNE_FORWARD_SOLUTION "Build MNE Forward Solution" ON)
option(BUILD_MNE_EDF2FIFF "Build MNE edf to fiff" ON)
option(BUILD_MNE_DIPOLE_FIT "Build MNE Dipole Fit" ON)
option(BUILD_MNE_BROWSE "Build MNE Browse" ON)
option(BUILD_MNE_INSPECT "Build MNE Inspect" ON)
option(BUILD_MNE_SHOW_FIFF "Build MNE Show Fiff" ON)
option(BUILD_MNE_COMPUTE_RAW_INVERSE "Build MNE Compute Raw Inverse" ON)
option(BUILD_MNE_SETUP_MRI "Build MNE Setup MRI" ON)
option(BUILD_MNE_SURF2BEM "Build MNE Surf2Bem" ON)
option(BUILD_MNE_SETUP_FORWARD_MODEL "Build MNE Setup Forward Model" ON)
option(BUILD_MNE_PROCESS_RAW "Build MNE Process Raw" ON)
option(BUILD_MNE_INVERSE_OPERATOR "Build MNE Inverse Operator" ON)
option(BUILD_MNE_COMPUTE_MNE "Build MNE Compute MNE" ON)
option(BUILD_MNE_MAKE_SOURCE_SPACE "Build MNE Make Source Space" ON)
option(BUILD_MNE_MARK_BAD_CHANNELS "Build MNE Mark Bad Channels" ON)
option(BUILD_MNE_LIST_SOURCE_SPACE "Build MNE List Source Space" ON)
option(BUILD_MNE_ANNOT2LABELS "Build MNE Annot2Labels" ON)
option(BUILD_MNE_CHECK_SURFACE "Build MNE Check Surface" ON)
option(BUILD_MNE_COMPENSATE_DATA "Build MNE Compensate Data" ON)
option(BUILD_MNE_PREPARE_BEM_MODEL "Build MNE Prepare BEM Model" ON)
option(BUILD_MNE_SMOOTH "Build MNE Smooth" ON)
option(BUILD_MNE_ADD_PATCH_INFO "Build MNE Add Patch Info" ON)
option(BUILD_MNE_AVERAGE_FORWARD_SOLUTIONS "Build MNE Average Forward Solutions" ON)
option(BUILD_MNE_COMPARE_FIF_FILES "Build MNE Compare Fif Files" ON)
option(BUILD_MNE_COV2PROJ "Build MNE Cov2Proj" ON)
option(BUILD_MNE_SENSITIVITY_MAP "Build MNE Sensitivity Map" ON)
option(BUILD_MNE_MAKE_SPHERE_BEM "Build MNE Make Sphere BEM" ON)
option(BUILD_MNE_VOLUME_SOURCE_SPACE "Build MNE Volume Source Space" ON)
option(BUILD_MNE_MORPH_LABELS "Build MNE Morph Labels" ON)
option(BUILD_MNE_MAKE_MORPH_MAPS "Build MNE Make Morph Maps" ON)
option(BUILD_MNE_SIMU "Build MNE Simu" ON)
option(BUILD_MNE_RAW2MAT "Build MNE Raw2Mat" ON)
option(BUILD_MNE_BRAIN_VISION2FIFF "Build MNE Brain Vision2Fiff" ON)
option(BUILD_MNE_CTF2FIFF "Build MNE CTF2Fiff" ON)
option(BUILD_MNE_KIT2FIFF "Build MNE Kit2Fiff" ON)
option(BUILD_MNE_FIX_MAG_COIL_TYPES "Build MNE Fix Mag Coil Types" ON)
option(BUILD_MNE_RENAME_CHANNELS "Build MNE Rename Channels" ON)
option(BUILD_MNE_LIST_BEM "Build MNE List BEM" ON)
option(BUILD_MNE_COLLECT_TRANSFORMS "Build MNE Collect Transforms" ON)
option(BUILD_MNE_ADD_TO_MEAS_INFO "Build MNE Add to Meas Info" ON)
option(BUILD_MNE_CTF_DIG2FIFF "Build MNE CTF Dig2Fiff" ON)
option(BUILD_MNE_MAKE_EEG_LAYOUT "Build MNE Make EEG Layout" ON)
option(BUILD_MNE_CONVERT_DIG_DATA "Build MNE Convert Dig Data" ON)
option(BUILD_MNE_CONVERT_SURFACE "Build MNE Convert Surface" ON)
option(BUILD_MNE_VOLUME_DATA2MRI "Build MNE Volume Data to MRI" ON)
option(BUILD_MNE_MAKE_COR_SET "Build MNE Make COR Set" ON)
option(BUILD_MNE_TUFTS2FIFF "Build MNE Tufts2Fiff" ON)
option(BUILD_MNE_INSERT_4D_COMP "Build MNE Insert 4D Comp" ON)
option(BUILD_MNE_CREATE_COMP_DATA "Build MNE Create Comp Data" ON)
option(BUILD_MNE_EXIMIA2FIFF "Build MNE Eximia2Fiff" ON)

# FreeSurfer detection — mne_watershed_bem and mne_flash_bem call FreeSurfer
# programs (mri_watershed, mri_convert, etc.) via QProcess at runtime.
# Only build these applications when FreeSurfer is available.
set(FREESURFER_FOUND FALSE)
if(DEFINED ENV{FREESURFER_HOME} AND EXISTS "$ENV{FREESURFER_HOME}/bin/mri_watershed")
  set(FREESURFER_FOUND TRUE)
  message(STATUS "FreeSurfer found at $ENV{FREESURFER_HOME}")
else()
  find_program(MRI_WATERSHED_BIN mri_watershed)
  if(MRI_WATERSHED_BIN)
    set(FREESURFER_FOUND TRUE)
    message(STATUS "FreeSurfer mri_watershed found at ${MRI_WATERSHED_BIN}")
  else()
    message(STATUS "FreeSurfer not found — skipping mne_watershed_bem and mne_flash_bem")
  endif()
endif()

option(BUILD_MNE_WATERSHED_BEM "Build MNE Watershed BEM (requires FreeSurfer)" ${FREESURFER_FOUND})
option(BUILD_MNE_FLASH_BEM "Build MNE Flash BEM (requires FreeSurfer)" ${FREESURFER_FOUND})

option(APPS_REALTIME "Build only realtime apps" OFF)
if(APPS_REALTIME)
  set(BUILD_MNE_SCAN ON)
  set(BUILD_MNE_ANALYZE OFF)
  set(BUILD_MNE_ANONYMIZE OFF)
  set(BUILD_MNE_RT_SERVER ON)
  set(BUILD_MNE_FORWARD_SOLUTION OFF)
  set(BUILD_MNE_EDF2FIFF OFF)
  set(BUILD_MNE_DIPOLE_FIT OFF)
endif()

option(APPS_OFFLINE "Build only offline apps" OFF)
if(APPS_OFFLINE)
  set(BUILD_MNE_SCAN OFF)
  set(BUILD_MNE_ANALYZE ON)
  set(BUILD_MNE_ANONYMIZE ON)
  set(BUILD_MNE_RT_SERVER OFF)
  set(BUILD_MNE_FORWARD_SOLUTION ON)
  set(BUILD_MNE_EDF2FIFF ON)

  set(BUILD_MNE_DIPOLE_FIT ON)
  set(BUILD_MNE_BROWSE ON)
  set(BUILD_MNE_INSPECT ON)
  set(BUILD_MNE_SHOW_FIFF ON)
  set(BUILD_MNE_COMPUTE_RAW_INVERSE ON)
  if(FREESURFER_FOUND)
    set(BUILD_MNE_WATERSHED_BEM ON)
    set(BUILD_MNE_FLASH_BEM ON)
  endif()
  set(BUILD_MNE_SURF2BEM ON)
  set(BUILD_MNE_SETUP_FORWARD_MODEL ON)
  set(BUILD_MNE_PROCESS_RAW ON)
  set(BUILD_MNE_INVERSE_OPERATOR ON)
  set(BUILD_MNE_COMPUTE_MNE ON)
  set(BUILD_MNE_MAKE_SOURCE_SPACE ON)
  set(BUILD_MNE_MARK_BAD_CHANNELS ON)
  set(BUILD_MNE_LIST_SOURCE_SPACE ON)
  set(BUILD_MNE_ANNOT2LABELS ON)
  set(BUILD_MNE_CHECK_SURFACE ON)
  set(BUILD_MNE_COMPENSATE_DATA ON)
  set(BUILD_MNE_PREPARE_BEM_MODEL ON)
  set(BUILD_MNE_SMOOTH ON)
  set(BUILD_MNE_ADD_PATCH_INFO ON)
  set(BUILD_MNE_AVERAGE_FORWARD_SOLUTIONS ON)
  set(BUILD_MNE_COMPARE_FIF_FILES ON)
  set(BUILD_MNE_COV2PROJ ON)
  set(BUILD_MNE_SENSITIVITY_MAP ON)
  set(BUILD_MNE_MAKE_SPHERE_BEM ON)
  set(BUILD_MNE_VOLUME_SOURCE_SPACE ON)
  set(BUILD_MNE_MORPH_LABELS ON)
  set(BUILD_MNE_MAKE_MORPH_MAPS ON)
  set(BUILD_MNE_SIMU ON)
  set(BUILD_MNE_RAW2MAT ON)
  set(BUILD_MNE_BRAIN_VISION2FIFF ON)
  set(BUILD_MNE_CTF2FIFF ON)
  set(BUILD_MNE_KIT2FIFF ON)
  set(BUILD_MNE_FIX_MAG_COIL_TYPES ON)
  set(BUILD_MNE_RENAME_CHANNELS ON)
  set(BUILD_MNE_LIST_BEM ON)
  set(BUILD_MNE_COLLECT_TRANSFORMS ON)
  set(BUILD_MNE_ADD_TO_MEAS_INFO ON)
  set(BUILD_MNE_CTF_DIG2FIFF ON)
  set(BUILD_MNE_MAKE_EEG_LAYOUT ON)
  set(BUILD_MNE_CONVERT_DIG_DATA ON)
  set(BUILD_MNE_CONVERT_SURFACE ON)
  set(BUILD_MNE_VOLUME_DATA2MRI ON)
  set(BUILD_MNE_MAKE_COR_SET ON)
  set(BUILD_MNE_TUFTS2FIFF ON)
  set(BUILD_MNE_INSERT_4D_COMP ON)
  set(BUILD_MNE_CREATE_COMP_DATA ON)
  set(BUILD_MNE_EXIMIA2FIFF ON)
endif()

if(BUILD_MNE_ANONYMIZE)
  add_subdirectory(mne_anonymize)
endif()
  if(BUILD_MNE_ANALYZE)
    add_subdirectory(mne_analyze)
  endif()
  if(BUILD_MNE_INSPECT AND TARGET mne_disp3D)
    add_subdirectory(mne_inspect)
  endif()
  if(BUILD_MNE_BROWSE)
    add_subdirectory(mne_browse)
  endif()
if(NOT WASM)
  if(BUILD_MNE_SCAN)
    add_subdirectory(mne_scan)
  endif()
  if(BUILD_MNE_RT_SERVER)
    add_subdirectory(mne_rt_server)
  endif()
  if(BUILD_MNE_FORWARD_SOLUTION)
    add_subdirectory(mne_forward_solution)
  endif()
  if(BUILD_MNE_EDF2FIFF)
    add_subdirectory(mne_edf2fiff)
  endif()
  if(BUILD_MNE_DIPOLE_FIT)
    add_subdirectory(mne_dipole_fit)
  endif()
  if(BUILD_MNE_SHOW_FIFF)
    add_subdirectory(mne_show_fiff)
  endif()
  if(BUILD_MNE_COMPUTE_RAW_INVERSE)
    add_subdirectory(mne_compute_raw_inverse)
  endif()
  if(BUILD_MNE_SETUP_MRI)
    add_subdirectory(mne_setup_mri)
  endif()
  if(BUILD_MNE_WATERSHED_BEM)
    add_subdirectory(mne_watershed_bem)
  endif()
  if(BUILD_MNE_SURF2BEM)
    add_subdirectory(mne_surf2bem)
  endif()
  if(BUILD_MNE_FLASH_BEM)
    add_subdirectory(mne_flash_bem)
  endif()
  if(BUILD_MNE_SETUP_FORWARD_MODEL)
    add_subdirectory(mne_setup_forward_model)
  endif()
  if(BUILD_MNE_PROCESS_RAW)
    add_subdirectory(mne_process_raw)
  endif()
  if(BUILD_MNE_INVERSE_OPERATOR)
    add_subdirectory(mne_inverse_operator)
  endif()
  if(BUILD_MNE_COMPUTE_MNE)
    add_subdirectory(mne_compute_mne)
  endif()
  if(BUILD_MNE_MAKE_SOURCE_SPACE)
    add_subdirectory(mne_make_source_space)
  endif()
  if(BUILD_MNE_MARK_BAD_CHANNELS)
    add_subdirectory(mne_mark_bad_channels)
  endif()
  if(BUILD_MNE_LIST_SOURCE_SPACE)
    add_subdirectory(mne_list_source_space)
  endif()
  if(BUILD_MNE_ANNOT2LABELS)
    add_subdirectory(mne_annot2labels)
  endif()
  if(BUILD_MNE_CHECK_SURFACE)
    add_subdirectory(mne_check_surface)
  endif()
  if(BUILD_MNE_COMPENSATE_DATA)
    add_subdirectory(mne_compensate_data)
  endif()
  if(BUILD_MNE_PREPARE_BEM_MODEL)
    add_subdirectory(mne_prepare_bem_model)
  endif()
  if(BUILD_MNE_SMOOTH)
    add_subdirectory(mne_smooth)
  endif()
  if(BUILD_MNE_ADD_PATCH_INFO)
    add_subdirectory(mne_add_patch_info)
  endif()
  if(BUILD_MNE_AVERAGE_FORWARD_SOLUTIONS)
    add_subdirectory(mne_average_forward_solutions)
  endif()
  if(BUILD_MNE_COMPARE_FIF_FILES)
    add_subdirectory(mne_compare_fif_files)
  endif()
  if(BUILD_MNE_COV2PROJ)
    add_subdirectory(mne_cov2proj)
  endif()
  if(BUILD_MNE_SENSITIVITY_MAP)
    add_subdirectory(mne_sensitivity_map)
  endif()
  if(BUILD_MNE_MAKE_SPHERE_BEM)
    add_subdirectory(mne_make_sphere_bem)
  endif()
  if(BUILD_MNE_VOLUME_SOURCE_SPACE)
    add_subdirectory(mne_volume_source_space)
  endif()
  if(BUILD_MNE_MORPH_LABELS)
    add_subdirectory(mne_morph_labels)
  endif()
  if(BUILD_MNE_MAKE_MORPH_MAPS)
    add_subdirectory(mne_make_morph_maps)
  endif()
  if(BUILD_MNE_SIMU)
    add_subdirectory(mne_simu)
  endif()
  if(BUILD_MNE_RAW2MAT)
    add_subdirectory(mne_raw2mat)
  endif()
  if(BUILD_MNE_BRAIN_VISION2FIFF)
    add_subdirectory(mne_brain_vision2fiff)
  endif()
  if(BUILD_MNE_CTF2FIFF)
    add_subdirectory(mne_ctf2fiff)
  endif()
  if(BUILD_MNE_KIT2FIFF)
    add_subdirectory(mne_kit2fiff)
  endif()
  if(BUILD_MNE_FIX_MAG_COIL_TYPES)
    add_subdirectory(mne_fix_mag_coil_types)
  endif()
  if(BUILD_MNE_RENAME_CHANNELS)
    add_subdirectory(mne_rename_channels)
  endif()
  if(BUILD_MNE_LIST_BEM)
    add_subdirectory(mne_list_bem)
  endif()
  if(BUILD_MNE_COLLECT_TRANSFORMS)
    add_subdirectory(mne_collect_transforms)
  endif()
  if(BUILD_MNE_ADD_TO_MEAS_INFO)
    add_subdirectory(mne_add_to_meas_info)
  endif()
  if(BUILD_MNE_CTF_DIG2FIFF)
    add_subdirectory(mne_ctf_dig2fiff)
  endif()
  if(BUILD_MNE_MAKE_EEG_LAYOUT)
    add_subdirectory(mne_make_eeg_layout)
  endif()
  if(BUILD_MNE_CONVERT_DIG_DATA)
    add_subdirectory(mne_convert_dig_data)
  endif()
  if(BUILD_MNE_CONVERT_SURFACE)
    add_subdirectory(mne_convert_surface)
  endif()
  if(BUILD_MNE_VOLUME_DATA2MRI)
    add_subdirectory(mne_volume_data2mri)
  endif()
  if(BUILD_MNE_MAKE_COR_SET)
    add_subdirectory(mne_make_cor_set)
  endif()
  if(BUILD_MNE_TUFTS2FIFF)
    add_subdirectory(mne_tufts2fiff)
  endif()
  if(BUILD_MNE_INSERT_4D_COMP)
    add_subdirectory(mne_insert_4D_comp)
  endif()
  if(BUILD_MNE_CREATE_COMP_DATA)
    add_subdirectory(mne_create_comp_data)
  endif()
  if(BUILD_MNE_EXIMIA2FIFF)
    add_subdirectory(mne_eximia2fiff)
  endif()
endif()
