set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIRECTORY}/bin)
if(WIN32)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endif()

if(APPLE)
  set(CMAKE_INSTALL_RPATH "@executable_path/../lib")
  if(NOT BUILD_MAC_APP_BUNDLE)
    set(CMAKE_MACOSX_RPATH TRUE)
  endif()
else()
  set(CMAKE_INSTALL_RPATH "\${ORIGIN}/../lib")
endif()
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

# ── Code-coverage instrumentation ───────────────────────────────────────
if(WITH_CODE_COV)
  add_compile_options("--coverage" "-O1" "-g")
  add_link_options("--coverage")
endif()

##==============================================================================
## GUI applications only — CLI tools have moved to src/tools/

option(BUILD_MNE_SCAN "Build MNE Scan" ON)
option(BUILD_MNE_ANALYZE "Build MNE Analyze" ON)
option(BUILD_MNE_ANALYZE_STUDIO "Build MNE Analyze Studio" ON)
option(BUILD_MNE_DIPOLE_FIT "Build MNE Dipole Fit" ON)
option(BUILD_MNE_BROWSE "Build MNE Browse" ON)
option(BUILD_MNE_INSPECT "Build MNE Inspect" ON)

if(BUILD_MNE_ANALYZE)
  add_subdirectory(mne_analyze)
endif()
if(BUILD_MNE_ANALYZE_STUDIO)
  add_subdirectory(mne_analyze_studio)
endif()
if(BUILD_MNE_INSPECT AND TARGET mne_disp3D)
  add_subdirectory(mne_inspect)
endif()
if(BUILD_MNE_BROWSE)
  add_subdirectory(mne_browse)
endif()
if(NOT WASM)
  if(BUILD_MNE_SCAN)
    add_subdirectory(mne_scan)
  endif()
  if(BUILD_MNE_DIPOLE_FIT)
    add_subdirectory(mne_dipole_fit)
  endif()
endif()
