set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/out/${CMAKE_BUILD_TYPE}/examples)

add_subdirectory(ex_averaging)
add_subdirectory(ex_cancel_noise)
add_subdirectory(ex_compute_forward)
add_subdirectory(ex_coreg)
add_subdirectory(ex_evoked_grad_amp)
add_subdirectory(ex_fiff_io)
add_subdirectory(ex_fiff_sniffer)
add_subdirectory(ex_file_utils)
add_subdirectory(ex_find_evoked)
add_subdirectory(ex_inverse_mne)
add_subdirectory(ex_make_inverse_operator)
add_subdirectory(ex_make_layout)
add_subdirectory(ex_read_bem)
add_subdirectory(ex_read_epochs)
add_subdirectory(ex_read_evoked)
add_subdirectory(ex_read_fwd)
add_subdirectory(ex_read_raw)
add_subdirectory(ex_read_write_raw)

## Needs charts
add_subdirectory(ex_clustered_inverse_mne)
add_subdirectory(ex_clustered_inverse_mne_raw)
add_subdirectory(ex_clustered_inverse_pwl_rap_music_raw)
add_subdirectory(ex_clustered_inverse_rap_music_raw)
add_subdirectory(ex_connectivity)
add_subdirectory(ex_connectivity_comparison)
add_subdirectory(ex_connectivity_performance)
add_subdirectory(ex_disp)
add_subdirectory(ex_disp_3D)
add_subdirectory(ex_fs_surface)
add_subdirectory(ex_filtering)
add_subdirectory(ex_histogram)
add_subdirectory(ex_hpiFit)
add_subdirectory(ex_inverse_mne_raw)
add_subdirectory(ex_inverse_pwl_rap_music)
add_subdirectory(ex_inverse_rap_music)
add_subdirectory(ex_read_fwd_disp_3D)
add_subdirectory(ex_roi_clustered_inverse_pwl_rap_music)
add_subdirectory(ex_st_clustered_inverse_pwl_rap_music)
add_subdirectory(ex_interpolation)
add_subdirectory(ex_spectral)
add_subdirectory(ex_tf_plot)
