set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/out/${CMAKE_BUILD_TYPE}/tests)
file(COPY ${CMAKE_SOURCE_DIR}/resources DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

add_subdirectory(test_coregistration)
add_subdirectory(test_dipole_fit)
add_subdirectory(test_fiff_coord_trans)
add_subdirectory(test_fiff_rwr)
add_subdirectory(test_fiff_mne_types_io)
add_subdirectory(test_filtering)
add_subdirectory(test_hpiFit)
add_subdirectory(test_hpiDataUpdater)
add_subdirectory(test_hpiFit_integration)
add_subdirectory(test_hpiModelParameter)
add_subdirectory(test_mne_forward_solution)
add_subdirectory(test_fiff_cov)
add_subdirectory(test_fiff_digitizer)
add_subdirectory(test_mne_msh_display_surface_set)
add_subdirectory(test_mne_project_to_surface)
add_subdirectory(test_utils_circularbuffer)
add_subdirectory(test_sensorSet)
add_subdirectory(test_signalModel)

add_subdirectory(test_interpolation)
add_subdirectory(test_geometryinfo)
add_subdirectory(test_spectral_connectivity)
add_subdirectory(test_mne_anonymize)
add_subdirectory(test_edf2fiff_rwr)
