set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIRECTORY}/tests)
set(BUILD_MAC_APP_BUNDLE OFF)

if(WIN32)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIRECTORY}/bin)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endif()

if(APPLE)
    set(CMAKE_INSTALL_RPATH "@executable_path/../lib")
  if(NOT BUILD_MAC_APP_BUNDLE)
    set(CMAKE_MACOSX_RPATH TRUE)
  endif()
else()
    set(CMAKE_INSTALL_RPATH "\${ORIGIN}/../lib")
endif()

set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

add_subdirectory(test_coregistration)

add_subdirectory(test_lsl)

add_subdirectory(test_dipole_fit)
add_subdirectory(test_fiff_coord_trans)
add_subdirectory(test_fiff_rwr)
add_subdirectory(test_fiff_mne_types_io)
add_subdirectory(test_filtering)
add_subdirectory(test_hpiFit)
add_subdirectory(test_hpiDataUpdater)
add_subdirectory(test_hpiFit_integration)
add_subdirectory(test_hpiModelParameter)
add_subdirectory(test_mne_forward_solution)
add_subdirectory(test_fiff_cov)
add_subdirectory(test_fiff_digitizer)
add_subdirectory(test_mne_msh_display_surface_set)
add_subdirectory(test_mne_project_to_surface)
add_subdirectory(test_utils_circularbuffer)
add_subdirectory(test_utils_mnemath)
add_subdirectory(test_utils_ioutils)
add_subdirectory(test_utils_sphere)
add_subdirectory(test_events)
add_subdirectory(test_fs)
add_subdirectory(test_sensorSet)
add_subdirectory(test_signalModel)

add_subdirectory(test_interpolation)
add_subdirectory(test_geometryinfo)
add_subdirectory(test_rt_source_streaming)
add_subdirectory(test_spectral_connectivity)
add_subdirectory(test_network_visualization)
add_subdirectory(test_sensor_streaming)
add_subdirectory(test_mne_anonymize)
add_subdirectory(test_edf2fiff_rwr)
add_subdirectory(test_compute_raw_inverse)
add_subdirectory(test_mne_compute_raw_inverse)
add_subdirectory(test_field_map)
add_subdirectory(test_mri_io)
add_subdirectory(test_inv_beamformer)
add_subdirectory(test_inv_loreta)
add_subdirectory(test_mne_setup_mri)
add_subdirectory(test_bids)
if(BUILD_MNE_WATERSHED_BEM)
  add_subdirectory(test_mne_watershed_bem)
endif()
add_subdirectory(test_mne_surf2bem)
if(BUILD_MNE_FLASH_BEM)
  add_subdirectory(test_mne_flash_bem)
endif()

# New comprehensive coverage tests
add_subdirectory(test_connectivity_metrics)
add_subdirectory(test_disp_colormap)
add_subdirectory(test_disp_viewers)
add_subdirectory(test_disp_viewers2)
add_subdirectory(test_utils_kmeans)
add_subdirectory(test_utils_warp)
add_subdirectory(test_utils_spectral)
add_subdirectory(test_fiff_extended)
add_subdirectory(test_rtprocessing_extended)
add_subdirectory(test_mne_extended)
add_subdirectory(test_fwd_extended)
add_subdirectory(test_fs_io)
add_subdirectory(test_disp3d_headless)
add_subdirectory(test_fiff_info)
add_subdirectory(test_fiff_data_types)
add_subdirectory(test_fiff_byte_swap)
add_subdirectory(test_filter_kernel)
add_subdirectory(test_filter_data)
add_subdirectory(test_fs_surface_annotation)
add_subdirectory(test_mne_data_types)
add_subdirectory(test_fwd_models)

# DSP preprocessing gap closures (ICA, IIR, SSS/tSSS, artifact detection, FIR façade)
add_subdirectory(test_dsp_ica)
add_subdirectory(test_dsp_iirfilter)
add_subdirectory(test_dsp_sss)
add_subdirectory(test_dsp_xdawn)
add_subdirectory(test_dsp_artifact_detect)
add_subdirectory(test_dsp_firfilter)
add_subdirectory(test_dsp_resample)
add_subdirectory(test_dsp_epoch_extractor)
add_subdirectory(test_dsp_bad_channel_detect)
add_subdirectory(test_dsp_welch_psd)
add_subdirectory(test_dsp_morlet_tfr)
add_subdirectory(test_dsp_spectrogram)
add_subdirectory(test_dsp_sphara)
add_subdirectory(test_dsp_filterio)
add_subdirectory(test_dsp_rt_cov)

# Coverage boost tests
add_subdirectory(test_inverse_rap_dipole)
add_subdirectory(test_fiff_coord_transform)
add_subdirectory(test_fs_annotation_labels)
add_subdirectory(test_fwd_sphere_settings)
add_subdirectory(test_mne_hemisphere_epoch)
add_subdirectory(test_rtprocessing_averaging)

# Data-driven coverage tests
add_subdirectory(test_fiff_raw_io)
add_subdirectory(test_mne_source_data)
add_subdirectory(test_inverse_data)
add_subdirectory(test_fwd_bem_data)

# Library-level coverage tests (consolidated from boost + coverage tests)
add_subdirectory(test_mne_library)
add_subdirectory(test_fwd_library)
add_subdirectory(test_fiff_fs_library)
add_subdirectory(test_inv_rt_library)

# Communication library tests
add_subdirectory(test_com)
add_subdirectory(test_com_rt_client)

# Utils, disp, and disp3D coverage tests
add_subdirectory(test_utils_layout_selection)
add_subdirectory(test_utils_observer_pattern)
add_subdirectory(test_disp_plots)
add_subdirectory(test_disp3d_viewstate)
add_subdirectory(test_disp3d_brainsurface)
add_subdirectory(test_disp3d_brainview)

# MNE Analyze Studio coverage tests
add_subdirectory(test_mne_analyze_studio_core_capabilities)
add_subdirectory(test_mne_analyze_studio_workflow_integration)

# v2.1.0 coverage gap-closing tests
add_subdirectory(test_conn_network)
add_subdirectory(test_mne_cov_matrix)
add_subdirectory(test_mne_channel_selection)
add_subdirectory(test_mri_vol_data)
add_subdirectory(test_tool_show_fiff)
add_subdirectory(test_tool_list_source_space)
add_subdirectory(test_tool_inverse_operator)
add_subdirectory(test_tool_preprocessing)
add_subdirectory(test_tool_compute_pipeline)
add_subdirectory(test_mne_analyze_studio_scene_jsonrpc)
add_subdirectory(test_mne_source_analysis)
add_subdirectory(test_mne_projections)
add_subdirectory(test_mne_forward_ops)
add_subdirectory(test_mne_io_coverage)
