set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIRECTORY}/bin)
if(WIN32)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endif()

if(APPLE)
  set(CMAKE_INSTALL_RPATH "@executable_path/../lib")
  if(NOT BUILD_MAC_APP_BUNDLE)
    set(CMAKE_MACOSX_RPATH TRUE)
  endif()
else()
  set(CMAKE_INSTALL_RPATH "\${ORIGIN}/../lib")
endif()
set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

# ── Code-coverage instrumentation ───────────────────────────────────────
if(WITH_CODE_COV)
  add_compile_options("--coverage" "-O1" "-g")
  add_link_options("--coverage")
endif()

##==============================================================================
## Build options for individual CLI tools

# Conversion tools
option(BUILD_MNE_EDF2FIFF "Build MNE edf to fiff" ON)
option(BUILD_MNE_BRAIN_VISION2FIFF "Build MNE Brain Vision2Fiff" ON)
option(BUILD_MNE_CTF2FIFF "Build MNE CTF2Fiff" ON)
option(BUILD_MNE_KIT2FIFF "Build MNE Kit2Fiff" ON)
option(BUILD_MNE_TUFTS2FIFF "Build MNE Tufts2Fiff" ON)
option(BUILD_MNE_EXIMIA2FIFF "Build MNE Eximia2Fiff" ON)
option(BUILD_MNE_CTF_DIG2FIFF "Build MNE CTF Dig2Fiff" ON)
option(BUILD_MNE_CONVERT_DIG_DATA "Build MNE Convert Dig Data" ON)
option(BUILD_MNE_CONVERT_SURFACE "Build MNE Convert Surface" ON)
option(BUILD_MNE_RAW2MAT "Build MNE Raw2Mat" ON)
option(BUILD_MNE_MAKE_COR_SET "Build MNE Make COR Set" ON)

# Forward modeling tools
option(BUILD_MNE_FORWARD_SOLUTION "Build MNE Forward Solution" ON)
option(BUILD_MNE_SETUP_FORWARD_MODEL "Build MNE Setup Forward Model" ON)
option(BUILD_MNE_SETUP_MRI "Build MNE Setup MRI" ON)
option(BUILD_MNE_SURF2BEM "Build MNE Surf2Bem" ON)
option(BUILD_MNE_PREPARE_BEM_MODEL "Build MNE Prepare BEM Model" ON)
option(BUILD_MNE_MAKE_SPHERE_BEM "Build MNE Make Sphere BEM" ON)
option(BUILD_MNE_CHECK_SURFACE "Build MNE Check Surface" ON)
option(BUILD_MNE_AVERAGE_FORWARD_SOLUTIONS "Build MNE Average Forward Solutions" ON)
option(BUILD_MNE_MAKE_SOURCE_SPACE "Build MNE Make Source Space" ON)

# FreeSurfer forward tools (FreeSurfer is only needed at runtime, not at compile time)
option(BUILD_MNE_WATERSHED_BEM "Build MNE Watershed BEM" ON)
option(BUILD_MNE_FLASH_BEM "Build MNE Flash BEM" ON)

# Inverse solution tools
option(BUILD_MNE_INVERSE_OPERATOR "Build MNE Inverse Operator" ON)
option(BUILD_MNE_COMPUTE_MNE "Build MNE Compute MNE" ON)
option(BUILD_MNE_COMPUTE_RAW_INVERSE "Build MNE Compute Raw Inverse" ON)
option(BUILD_MNE_SENSITIVITY_MAP "Build MNE Sensitivity Map" ON)
option(BUILD_MNE_SMOOTH "Build MNE Smooth" ON)
option(BUILD_MNE_VOLUME_DATA2MRI "Build MNE Volume Data to MRI" ON)

# Preprocessing tools
option(BUILD_MNE_PROCESS_RAW "Build MNE Process Raw" ON)
option(BUILD_MNE_COMPENSATE_DATA "Build MNE Compensate Data" ON)
option(BUILD_MNE_COV2PROJ "Build MNE Cov2Proj" ON)
option(BUILD_MNE_CREATE_COMP_DATA "Build MNE Create Comp Data" ON)
option(BUILD_MNE_MARK_BAD_CHANNELS "Build MNE Mark Bad Channels" ON)
option(BUILD_MNE_RENAME_CHANNELS "Build MNE Rename Channels" ON)
option(BUILD_MNE_FIX_MAG_COIL_TYPES "Build MNE Fix Mag Coil Types" ON)
option(BUILD_MNE_ADD_TO_MEAS_INFO "Build MNE Add to Meas Info" ON)
option(BUILD_MNE_INSERT_4D_COMP "Build MNE Insert 4D Comp" ON)
option(BUILD_MNE_ANONYMIZE "Build MNE Anonymize" ON)

# Surface & label tools
option(BUILD_MNE_VOLUME_SOURCE_SPACE "Build MNE Volume Source Space" ON)
option(BUILD_MNE_ADD_PATCH_INFO "Build MNE Add Patch Info" ON)
option(BUILD_MNE_MAKE_MORPH_MAPS "Build MNE Make Morph Maps" ON)
option(BUILD_MNE_MORPH_LABELS "Build MNE Morph Labels" ON)
option(BUILD_MNE_ANNOT2LABELS "Build MNE Annot2Labels" ON)
option(BUILD_MNE_MAKE_EEG_LAYOUT "Build MNE Make EEG Layout" ON)

# Info/inspection tools
option(BUILD_MNE_SHOW_FIFF "Build MNE Show Fiff" ON)
option(BUILD_MNE_COMPARE_FIF_FILES "Build MNE Compare Fif Files" ON)
option(BUILD_MNE_LIST_BEM "Build MNE List BEM" ON)
option(BUILD_MNE_LIST_SOURCE_SPACE "Build MNE List Source Space" ON)
option(BUILD_MNE_COLLECT_TRANSFORMS "Build MNE Collect Transforms" ON)

# Server
option(BUILD_MNE_RT_SERVER "Build MNE Rt Server" ON)

# Simulation
option(BUILD_MNE_SIMU "Build MNE Simu" ON)

##==============================================================================
## Preset: build only realtime tools

option(TOOLS_REALTIME "Build only realtime tools" OFF)
if(TOOLS_REALTIME)
  set(BUILD_MNE_RT_SERVER ON)
  # Disable everything else
  set(BUILD_MNE_EDF2FIFF OFF)
  set(BUILD_MNE_FORWARD_SOLUTION OFF)
  set(BUILD_MNE_ANONYMIZE OFF)
endif()

##==============================================================================
## Add subdirectories (tools are NOT built for WASM)

if(NOT WASM)
  # Conversion
  if(BUILD_MNE_EDF2FIFF)
    add_subdirectory(conversion/mne_edf2fiff)
  endif()
  if(BUILD_MNE_BRAIN_VISION2FIFF)
    add_subdirectory(conversion/mne_brain_vision2fiff)
  endif()
  if(BUILD_MNE_CTF2FIFF)
    add_subdirectory(conversion/mne_ctf2fiff)
  endif()
  if(BUILD_MNE_KIT2FIFF)
    add_subdirectory(conversion/mne_kit2fiff)
  endif()
  if(BUILD_MNE_TUFTS2FIFF)
    add_subdirectory(conversion/mne_tufts2fiff)
  endif()
  if(BUILD_MNE_EXIMIA2FIFF)
    add_subdirectory(conversion/mne_eximia2fiff)
  endif()
  if(BUILD_MNE_CTF_DIG2FIFF)
    add_subdirectory(conversion/mne_ctf_dig2fiff)
  endif()
  if(BUILD_MNE_CONVERT_DIG_DATA)
    add_subdirectory(conversion/mne_convert_dig_data)
  endif()
  if(BUILD_MNE_CONVERT_SURFACE)
    add_subdirectory(conversion/mne_convert_surface)
  endif()
  if(BUILD_MNE_RAW2MAT)
    add_subdirectory(conversion/mne_raw2mat)
  endif()
  if(BUILD_MNE_MAKE_COR_SET)
    add_subdirectory(conversion/mne_make_cor_set)
  endif()

  # Forward modeling
  if(BUILD_MNE_FORWARD_SOLUTION)
    add_subdirectory(forward/mne_forward_solution)
  endif()
  if(BUILD_MNE_SETUP_FORWARD_MODEL)
    add_subdirectory(forward/mne_setup_forward_model)
  endif()
  if(BUILD_MNE_SETUP_MRI)
    add_subdirectory(forward/mne_setup_mri)
  endif()
  if(BUILD_MNE_SURF2BEM)
    add_subdirectory(forward/mne_surf2bem)
  endif()
  if(BUILD_MNE_WATERSHED_BEM)
    add_subdirectory(forward/mne_watershed_bem)
  endif()
  if(BUILD_MNE_FLASH_BEM)
    add_subdirectory(forward/mne_flash_bem)
  endif()
  if(BUILD_MNE_PREPARE_BEM_MODEL)
    add_subdirectory(forward/mne_prepare_bem_model)
  endif()
  if(BUILD_MNE_MAKE_SPHERE_BEM)
    add_subdirectory(forward/mne_make_sphere_bem)
  endif()
  if(BUILD_MNE_CHECK_SURFACE)
    add_subdirectory(forward/mne_check_surface)
  endif()
  if(BUILD_MNE_AVERAGE_FORWARD_SOLUTIONS)
    add_subdirectory(forward/mne_average_forward_solutions)
  endif()
  if(BUILD_MNE_MAKE_SOURCE_SPACE)
    add_subdirectory(forward/mne_make_source_space)
  endif()

  # Inverse solutions
  if(BUILD_MNE_INVERSE_OPERATOR)
    add_subdirectory(inverse/mne_inverse_operator)
  endif()
  if(BUILD_MNE_COMPUTE_MNE)
    add_subdirectory(inverse/mne_compute_mne)
  endif()
  if(BUILD_MNE_COMPUTE_RAW_INVERSE)
    add_subdirectory(inverse/mne_compute_raw_inverse)
  endif()
  if(BUILD_MNE_SENSITIVITY_MAP)
    add_subdirectory(inverse/mne_sensitivity_map)
  endif()
  if(BUILD_MNE_SMOOTH)
    add_subdirectory(inverse/mne_smooth)
  endif()
  if(BUILD_MNE_VOLUME_DATA2MRI)
    add_subdirectory(inverse/mne_volume_data2mri)
  endif()

  # Preprocessing
  if(BUILD_MNE_PROCESS_RAW)
    add_subdirectory(preprocessing/mne_process_raw)
  endif()
  if(BUILD_MNE_COMPENSATE_DATA)
    add_subdirectory(preprocessing/mne_compensate_data)
  endif()
  if(BUILD_MNE_COV2PROJ)
    add_subdirectory(preprocessing/mne_cov2proj)
  endif()
  if(BUILD_MNE_CREATE_COMP_DATA)
    add_subdirectory(preprocessing/mne_create_comp_data)
  endif()
  if(BUILD_MNE_MARK_BAD_CHANNELS)
    add_subdirectory(preprocessing/mne_mark_bad_channels)
  endif()
  if(BUILD_MNE_RENAME_CHANNELS)
    add_subdirectory(preprocessing/mne_rename_channels)
  endif()
  if(BUILD_MNE_FIX_MAG_COIL_TYPES)
    add_subdirectory(preprocessing/mne_fix_mag_coil_types)
  endif()
  if(BUILD_MNE_ADD_TO_MEAS_INFO)
    add_subdirectory(preprocessing/mne_add_to_meas_info)
  endif()
  if(BUILD_MNE_INSERT_4D_COMP)
    add_subdirectory(preprocessing/mne_insert_4D_comp)
  endif()
  if(BUILD_MNE_ANONYMIZE)
    add_subdirectory(preprocessing/mne_anonymize)
  endif()

  # Surface & label operations
  if(BUILD_MNE_VOLUME_SOURCE_SPACE)
    add_subdirectory(surface/mne_volume_source_space)
  endif()
  if(BUILD_MNE_ADD_PATCH_INFO)
    add_subdirectory(surface/mne_add_patch_info)
  endif()
  if(BUILD_MNE_MAKE_MORPH_MAPS)
    add_subdirectory(surface/mne_make_morph_maps)
  endif()
  if(BUILD_MNE_MORPH_LABELS)
    add_subdirectory(surface/mne_morph_labels)
  endif()
  if(BUILD_MNE_ANNOT2LABELS)
    add_subdirectory(surface/mne_annot2labels)
  endif()
  if(BUILD_MNE_MAKE_EEG_LAYOUT)
    add_subdirectory(surface/mne_make_eeg_layout)
  endif()

  # Info/inspection
  if(BUILD_MNE_SHOW_FIFF)
    add_subdirectory(info/mne_show_fiff)
  endif()
  if(BUILD_MNE_COMPARE_FIF_FILES)
    add_subdirectory(info/mne_compare_fif_files)
  endif()
  if(BUILD_MNE_LIST_BEM)
    add_subdirectory(info/mne_list_bem)
  endif()
  if(BUILD_MNE_LIST_SOURCE_SPACE)
    add_subdirectory(info/mne_list_source_space)
  endif()
  if(BUILD_MNE_COLLECT_TRANSFORMS)
    add_subdirectory(info/mne_collect_transforms)
  endif()

  # Server
  if(BUILD_MNE_RT_SERVER)
    add_subdirectory(server/mne_rt_server)
  endif()

  # Simulation
  if(BUILD_MNE_SIMU)
    add_subdirectory(simulation/mne_simu)
  endif()
endif()
